Add hook to activate venv

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -4,6 +4,16 @@
   entry: hook.sh
   args: [--force, --no-toc, -o docs, src]
   always_run: true
-  exclude: .*
+  files: '^$'
+  pass_filenames: false
+  language: script
+
+- id: activate-venv
+  name: Activate venv
+  description: Activate the virtual environment
+  entry: run_command.sh
+  args: [.venv\Scripts\activate]
+  always_run: true
+  files: '^$'
   pass_filenames: false
   language: script
