--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
 - id: sphinx-apidoc
   name: Update Sphinx Documentation
   description: Fails, if documentation is not complete and updates the sphinx doc.
-  entry: sphinx_apidoc.py
+  entry: sphinx_pre_commit
   args: [--force, --no-toc, -o docs, src]
   always_run: true
   files: '^$'
