--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
 [project]
-name = "sphinx_apidoc"
-version = "0.12.0"
+name = "sphinx_pre_commit"
+version = "0.13.0"
+
+[options.entry_points]
+console_scripts =
+    sphinx_pre_commit = sphinx_pre_commit:main
 
 [build-system]
 requires = ["hatchling"]
