--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [project]
 name = "sphinx_pre_commit"
-version = "0.13.0"
+version = "0.15.0"
 
-[options.entry_points]
-console_scripts =
-    sphinx_pre_commit = sphinx_pre_commit:main
+[project.scripts]
+sphinx_pre_commit = "sphinx_pre_commit:main"
 
 [build-system]
 requires = ["hatchling"]
