--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,7 +2,7 @@
   name: Update Sphinx Documentation
   description: Fails, if documentation is not complete and updates the sphinx doc.
   entry: sphinx_pre_commit
-  args: [--force, --no-toc, -o docs, src]
+  args: [--force, --no-toc, -o, docs, src]
   always_run: true
   files: '^$'
   pass_filenames: false
